--- a/src/index.css
+++ b/src/index.css
@@ -10,4 +10,7 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+  display: flex;
+  justify-items: center;
+  align-items: center;
 }
